// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button [common] example testing should match snapshot(s) for all-types 1`] = `
<button
  className="lucid-Button"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    standard
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 2`] = `
<button
  className="lucid-Button"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    standard
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 3`] = `
<button
  className="lucid-Button lucid-Button-is-disabled"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    standard
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 4`] = `
<button
  className="lucid-Button lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 5`] = `
<button
  className="lucid-Button lucid-Button-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    standard
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 6`] = `
<button
  className="lucid-Button lucid-Button-primary"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    standard
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 7`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    standard
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 8`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 9`] = `
<button
  className="lucid-Button lucid-Button-link"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    standard
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 10`] = `
<button
  className="lucid-Button lucid-Button-link"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    standard
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 11`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-link"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    standard
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 12`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 13`] = `
<button
  className="lucid-Button lucid-Button-danger"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    standard
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 14`] = `
<button
  className="lucid-Button lucid-Button-danger"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    standard
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 15`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    standard
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 16`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 17`] = `
<button
  className="lucid-Button lucid-Button-invisible"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    standard
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 18`] = `
<button
  className="lucid-Button lucid-Button-invisible"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    standard
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 19`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-invisible"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    standard
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 20`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 21`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 22`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    small
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 23`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    small
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 24`] = `
<button
  className="lucid-Button lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 25`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 26`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    small
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 27`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    small
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 28`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 29`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 30`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    small
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 31`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-link lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    small
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 32`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 33`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 34`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    small
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 35`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    small
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 36`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 37`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 38`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    small
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 39`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-invisible lucid-Button-small"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    small
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 40`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 41`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 42`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    short
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 43`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    short
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 44`] = `
<button
  className="lucid-Button lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 45`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 46`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    short
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 47`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    short
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 48`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 49`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 50`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    short
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 51`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-link lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    short
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 52`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 53`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 54`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    short
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 55`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    short
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 56`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 57`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 58`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    short
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 59`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-invisible lucid-Button-short"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    short
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 60`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 61`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 62`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    large
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 63`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    large
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 64`] = `
<button
  className="lucid-Button lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 65`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 66`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    large
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 67`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-primary lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    large
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 68`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 69`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 70`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    large
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 71`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-link lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    large
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 72`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 73`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 74`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    large
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 75`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-danger lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    large
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 76`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 77`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 78`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    large
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 79`] = `
<button
  className="lucid-Button lucid-Button-is-disabled lucid-Button-invisible lucid-Button-large"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
    disabled 
    large
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 80`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 4,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon
      aspectRatio="xMidYMid meet"
      color="primary"
      isClickable={false}
      isDisabled={false}
      onClick={[Function]}
      onSelect={[Function]}
      size={16}
      viewBox="0 0 16 16"
    />
  </span>
</button>
`;
